create notion model
